--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Reaearch Blog"
 author: "Alexandra Higley"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+description: "Graduate student at Penn State University style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -22,8 +22,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
+  - {title: Mail, icon: envelope, url: "anh5866@psu.edu"}
+  - {title: Github, icon: github, url: "https://github.com/alexhigley"}
   - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
