--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ minimal: true             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html"}
 #  - {url: "/alex.pdf", title: CV}
-  - {file: "blog.md"}
+  - {file: "blog.md", title: Blog}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
