--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.html"}
 #  - {url: "/alex.pdf", title: CV}
   - {file: "blog.md", title: Blog}
-  - {file: "README.md"}
+#  - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "anh5866@psu.edu"}
