--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@ minimal: true             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.md"}
+  - {url: "https://alexhigley.github.io/", title: Home}
+#  - {file: "index.md"}
 #  - {url: "/alex.pdf", title: CV}
   - {file: "blog.md", title: Blog}
 #  - {file: "README.md"}
